# vista-authen

./: .agy_rechandoff  .env.example  .gitignore  Dockerfile  TODO.md  agents.md  docker-compose.yml  hello.py  instructions.md  nginx.conf  plan.md  pyproject.toml  seed.py  test.db
alembic/: env.py
app/: main.py
app/core/: config.py  database.py  deps.py  limiter.py  security.py
app/models/: __init__.py  models.py
app/routes/: access.py  audit.py  auth.py  checkers.py  cleanup.py  residents.py  units.py
app/schemas/: __init__.py  schemas.py
app/services/: __init__.py  access_service.py  admin_service.py  audit_service.py  checker_service.py  cleanup_service.py  crypto_service.py  resident_service.py  unit_service.py
tests/: conftest.py  test_access_service.py  test_admin_service.py  test_audit_service.py  test_checker_service.py  test_crypto_service.py  test_resident_service.py  test_security.py  test_security_hardening.py  test_unit_service.py
web/admin/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/admin/src/: App.tsx
web/admin/src/screens/: Dashboard.tsx  LoginScreen.tsx
web/checker/: index.html  package-lock.json  package.json
web/checker/src/: App.tsx
web/checker/src/components/: AuditLogViewer.tsx  QRScanner.tsx
web/checker/src/screens/: Dashboard.tsx  LoginScreen.tsx
web/resident/: index.html  package-lock.json  package.json  vite.config.ts
web/resident/src/: App.tsx
web/shared/: package-lock.json  package.json  tsconfig.json
web/shared/src/: api.ts  crypto.ts  index.ts  types.ts
(+2 files in other folders)
